# concrete

./: Cargo.toml  README.md
.cargo/: config.toml
.github/builders/: Dockerfile.capi-env
.github/workflows/: check_commit.yml  docker_release.yml
concrete/: Cargo.toml
concrete-benchmark/: Cargo.toml
concrete-benchmark/src/: main.rs  utils.rs
concrete-benchmark/src/backends/: core.rs  mod.rs
concrete-benchmark/src/generics/: cleartext_creation.rs  cleartext_vector_creation.rs  (+40 more)
concrete-commons/src/: dispersion.rs  key_kinds.rs  parameters.rs
concrete-core/: Cargo.toml
concrete-core/benches/: bench.rs  bootstrap.rs  bsk_generation.rs  keyswitch.rs  lwe_encrypt.rs  mac.rs  multisum.rs  random.rs  rlwe_encrypt.rs
concrete-core/src/: lib.rs  prelude.rs
concrete-correctness/: Cargo.toml
concrete-correctness/src/: lib.rs  utils.rs
concrete-correctness/src/backends/: core.rs  mod.rs
concrete-correctness/src/generics/: cleartext_creation.rs  cleartext_vector_creation.rs  glwe_ciphertext_decryption.rs  glwe_ciphertext_encryption.rs  glwe_ciphertext_inplace_decryption.rs  glwe_ciphertext_inplace_encryption.rs  glwe_ciphertext_vector_decryption.rs  glwe_ciphertext_vector_encryption.rs  glwe_ciphertext_vector_inplace_decryption.rs  glwe_ciphertext_vector_inplace_encryption.rs  glwe_ciphertext_vector_zero_encryption.rs  glwe_ciphertext_zero_encryption.rs  lwe_ciphertext_cleartext_assigned_multiplication.rs  lwe_ciphertext_decryption.rs  mod.rs
concrete-csprng/: Cargo.toml
concrete-csprng/benches/: benchmark.rs
concrete-csprng/examples/: generate_random.rs
concrete-csprng/src/: generator.rs  lib.rs
concrete-ffi/: CMakeLists.txt  Cargo.toml  README.md  cbindgen.toml
concrete-ffi/src/core/: mod.rs
concrete-ffi/tests/: CMakeLists.txt  test_expand_plaintext_list.c  test_glwe_encrypt_decrypt.c  test_lwe_bootstrap.c  test_lwe_bootstrap_random_func.c  test_lwe_encrypt_add_decrypt.c  test_lwe_encrypt_add_plaintext_decrypt.c  test_lwe_encrypt_decrypt.c  test_lwe_encrypt_keyswitch_decrypt.c  test_lwe_encrypt_mul_cleartext_decrypt.c  test_lwe_encrypt_negate_decrypt.c
concrete-npe/src/: lib.rs
concrete-tasks/src/: check.rs  main.rs  test.rs
(+222 files in other folders)
