[package]
name = "concrete-correctness"
version = "0.1.0"
edition = "2018"

[dependencies]
concrete-core = { path="../concrete-core" }
concrete-commons = { path="../concrete-commons" }
paste = "1.0.5"

[features]
default = ["backend_core"]
backend_core = []

[profile.release]
opt-level = 3
debug = true
lto="fat"
